--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,8 @@
   <title>NGO Website</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/public/css/homepage.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
 </head>
 <style>
