--- a/views/news.ejs
+++ b/views/news.ejs
@@ -151,8 +151,15 @@
           "Leading the ‘Go Green Revolution’ by planting trees and fostering environmental sustainability for a healthier planet.",
         image: "/images/img25.jpg"
       },
-      
-      
+      {
+        id: 8,
+        title: "Yoga for All: Promoting Holistic Wellbeing",
+        description:
+          "Weekly yoga sessions encouraging mental, physical, and spiritual health through community-driven practices in parks and schools.",
+        image: "/images/yoga1.jpg"
+      },
+
+
     ];
 
     const container = document.getElementById("cardContainer");
