--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,9 +34,11 @@
       </ul>
 
       <!-- Donate Button -->
-      <a href="/donate" class="mt-2 lg:mt-0 px-5 py-2 bg-green-500 text-white rounded-full hover:bg-green-600 transition">
-        Donate
-      </a>
+      <a href="/donate"
+   class="inline-block mt-2 lg:mt-0 px-6 py-2.5 bg-[#02C720] text-white font-semibold rounded-full shadow-md hover:bg-[#029f1a] hover:shadow-[0_4px_20px_rgba(2,199,32,0.5)] hover:scale-105 transition-all duration-300 ease-in-out">
+  Donate
+</a>
+
     </div>
   </div>
 </nav>
