--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
       </p>
       <br><br>
       <div class="text-center md:text-left">
-        <a href="/"><button class="bg-green-500 text-white border-2 border-green-700 px-6 py-2 mt-4 rounded">Learn more</button></a>
+        <a href="/about"><button class="bg-green-500 text-white border-2 border-green-700 px-6 py-2 mt-4 rounded">Learn more</button></a>
       </div>
     </div>
     <div class="w-full lg:w-[700px] px-4 md:px-20 mt-10 lg:mt-0">
